--- a/style.css
+++ b/style.css
@@ -1,17 +1,9 @@
 h1 {
-    color: green;
-}
-
-h2 {
-    color: magenta;
-}
-
-p {
-    color: white;
-    background-color: black;
-}
-
-button {
-    color: red;
-    background-color: pink;
+    text-transform: uppercase;
+    font-family: monospace;
+    text-align: center;
+    font-weight: 100;
+    font-size: 40px;
+    letter-spacing: 20px;
+    text-decoration: plum wavy underline;
 }
