--- a/style.css
+++ b/style.css
@@ -1,13 +1,9 @@
-/* Make all LI's blue */
-li {
-    color: blue;
+header a {
+    font-size: 30px;
+    color: teal;
 }
-/* Make everything with the class of 'done' grey*/
-.done {
-    color: grey;
-}
-/* Make the element with the id of 'clear' have a red BG and white text */
-#clear {
-    color: white;
-    background-color: red;
+
+#dislikes a {
+    font-weight: bold;
+    color: red;
 }
